--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ ADMIN_PASSWORD=ваш_надёжный_пароль
 # Git — для автоматического коммита и пуша
 GIT_USER_NAME=Your Name
 GIT_USER_EMAIL=your@email.com
+
+# (Опционально) SSH URL репозитория — если репо клонировано через HTTPS,
+# entrypoint автоматически переключит remote на SSH для git push
+# GIT_REMOTE_URL=git@github.com:USER/mironova.github.io.git
