--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - ./static/uploads:/app/static/uploads
       # Git-репозиторий для кнопки «Опубликовать»
       - ./.git:/app/.git
-      # SSH-ключи для git push (read-only)
-      - ~/.ssh:/root/.ssh:ro
+      # SSH-ключ для git push (read-only)
+      - ~/.ssh/id_ed25519:/root/.ssh/id_ed25519:ro
     environment:
       - SECRET_KEY=${SECRET_KEY:-supersecretkey_change_me}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
