--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ GIT_USER_EMAIL=your@email.com
 # (Опционально) SSH URL репозитория — если репо клонировано через HTTPS,
 # entrypoint автоматически переключит remote на SSH для git push
 # GIT_REMOTE_URL=git@github.com:USER/mironova.github.io.git
+
+# SSH-ключ для git push (base64-кодированный)
+# Сгенерировать: cat ~/.ssh/id_ed25519 | base64 -w0
+# SSH_PRIVATE_KEY=ваш_ключ_в_base64
