--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,17 @@ services:
       - "4343:4343"
     volumes:
       # Данные CMS и загрузки (сохраняются между перезапусками)
-      - ./data:/app/data
-      - ./static/uploads:/app/static/uploads
-      # Git-репозиторий для кнопки «Опубликовать»
-      - ./.git:/app/.git
-      # SSH-ключ для git push
-      # На UmbrelOS замените путь: /home/umbrel/.ssh/id_ed25519
-      - ${SSH_KEY_PATH:-~/.ssh/id_ed25519}:/tmp/ssh-key/id_ed25519:ro
+      - site-data:/app/data
+      - site-uploads:/app/static/uploads
     environment:
       - SECRET_KEY=${SECRET_KEY:-supersecretkey_change_me}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GIT_USER_NAME=${GIT_USER_NAME:-Admin}
       - GIT_USER_EMAIL=${GIT_USER_EMAIL:-admin@example.com}
       - GIT_REMOTE_URL=${GIT_REMOTE_URL:-}
+      - SSH_PRIVATE_KEY=${SSH_PRIVATE_KEY:-}
       - FLASK_ENV=production
+
+volumes:
+  site-data:
+  site-uploads:
